--- a/tpl/self_menu.twig
+++ b/tpl/self_menu.twig
@@ -26,6 +26,10 @@
 
   <script type="text/javascript">
     $( function() {
+      $( "#accordion" ).accordion( {
+        heightStyle: "content"
+      } );
+
       {% for item in calendars %}
         $( "#{{ widget.full }}__{{ item.subject }}_{{ item.name }}" ).button().click( function() {
           $( "#left_extruder" ).closeMbExtruder();
@@ -93,61 +97,68 @@
 
 {% block widget %}
 
-  <div>
+  <div id="accordion">
+
     {% if calendars|length %}
-      <div class="title" style="text-align: center">Calendars</div>
+      <h3>Calendars</h3>
+      <div>
       {% for calendar in calendars %}
         <div style="padding: 2px;">
           <button id="{{ widget.full }}__{{ calendar.subject }}_{{ calendar.name }}"
                   style="width: 100%;">{{ calendar.heading|ucwords }}</button>
         </div>
       {% endfor %}
-      <div class="spacer" />
+      </div>
     {% endif %}
 
     {% if lists|length %}
-      <div class="title" style="text-align: center">Lists</div>
+      <h3>Lists</h3>
+      <div>
       {% for list in lists %}
         <div style="padding: 2px;">
           <button id="{{ widget.full }}__{{ list.subject }}_{{ list.name }}"
                   style="width: 100%;">{{ list.heading|ucwords }}</button>
         </div>
       {% endfor %}
-      <div class="spacer" />
+      </div>
     {% endif %}
 
     {% if utilities|length %}
-      <div class="title" style="text-align: center">Utilities</div>
+      <h3>Utilities</h3>
+      <div>
       {% for utility in utilities %}
         <div style="padding: 2px;">
           <button id="{{ widget.full }}__{{ utility.subject }}_{{ utility.name }}"
                   style="width: 100%;">{{ utility.heading|ucwords }}</button>
         </div>
       {% endfor %}
-      <div class="spacer" />
+      </div>
     {% endif %}
 
     {% if reports|length %}
-      <div class="title" style="text-align: center">Reports</div>
+      <h3>Reports</h3>
+      <div>
       {% for report in reports %}
         <div style="padding: 2px;">
           <button id="{{ widget.full }}__{{ report.subject }}_{{ report.name }}"
                   style="width: 100%;">{{ report.heading|ucwords }}</button>
         </div>
       {% endfor %}
-      <div class="spacer" />
+      </div>
     {% endif %}
 
     {% if charts|length %}
-      <div class="title" style="text-align: center">Charts</div>
+      <h3>Charts</h3>
+      <div>
       {% for chart in charts %}
         <div style="padding: 2px;">
           <button id="{{ widget.full }}__{{ chart.subject }}_{{ chart.name }}"
                   style="width: 100%;">{{ chart.heading|ucwords }}</button>
         </div>
       {% endfor %}
-      <div class="spacer" />
+      </div>
     {% endif %}
+
   </div>
 
 {% endblock widget %}
