--- a/tpl/service_view.twig
+++ b/tpl/service_view.twig
@@ -15,5 +15,6 @@
   {{ include_list( 'role', role_list|default(false), true ) }}
   {{ include_list( 'site', site_list|default(false), true ) }}
   {{ include_list( 'region_site', region_site_list|default(false), true ) }}
+  {{ include_list( 'jurisdiction', jurisdiction_list|default(false), true ) }}
 
 {% endblock record %}
