Adding better internationalization support
- A list of 184 languages have been added and can now be activated
- Services must now have a default language
- Users can be restricted to any activited language
- Participants can have their preferred language set to any active language

--- a/tpl/user_view.twig
+++ b/tpl/user_view.twig
@@ -31,6 +31,7 @@
 
   {{ parent() }}
   {% from 'macros.twig' import include_list %}
+  {{ include_list( 'language', language_list|default(false), true ) }}
   {{ include_list( 'access', access_list|default(false), true ) }}
   {{ include_list( 'activity', activity_list|default(false), true ) }}
 
