Part 1 of converting "service" keyname to "application" (more to come)

--- a/tpl/application_add_cohort.twig
+++ b/tpl/application_add_cohort.twig
@@ -1,7 +1,7 @@
 {##
- # service_add_cohort.twig
+ # appointment_add_cohort.twig
  # 
- # Add cohort to a service.
+ # Add cohort to a appointment.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add_list.twig for parameters
  #}
