--- a/tpl/application_add_role.twig
+++ b/tpl/application_add_role.twig
@@ -1,7 +1,7 @@
 {##
- # service_add_role.twig
+ # appointment_add_role.twig
  # 
- # Add role to a service.
+ # Add role to a appointment.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add_list.twig for parameters
  #}
