--- a/tpl/application_list.twig
+++ b/tpl/application_list.twig
@@ -1,7 +1,7 @@
 {##
- # service_list.twig
+ # appointment_list.twig
  # 
- # Lists services.
+ # Lists appointments.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_list.twig for parameters
  #}
