--- a/tpl/application_view.twig
+++ b/tpl/application_view.twig
@@ -1,7 +1,7 @@
 {##
- # service_view.twig
+ # appointment_view.twig
  # 
- # View service details.
+ # View appointment details.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_view.twig for parameters
  #}
