--- a/tpl/application_add_jurisdiction.twig
+++ b/tpl/application_add_jurisdiction.twig
@@ -1,7 +1,7 @@
 {##
- # service_add_jurisdiction.twig
+ # appointment_add_jurisdiction.twig
  # 
- # Adds a jurisdiction to a service.
+ # Adds a jurisdiction to a appointment.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add_record.twig for parameters
  #}
