Fixing mass-typo (appointment instead of application)

--- a/tpl/application_add_cohort.twig
+++ b/tpl/application_add_cohort.twig
@@ -1,7 +1,7 @@
 {##
- # appointment_add_cohort.twig
+ # application_add_cohort.twig
  # 
- # Add cohort to a appointment.
+ # Add cohort to a application.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add_list.twig for parameters
  #}
