--- a/tpl/application_add_region_site.twig
+++ b/tpl/application_add_region_site.twig
@@ -1,7 +1,7 @@
 {##
- # appointment_add_region_site.twig
+ # application_add_region_site.twig
  # 
- # Adds a region_site to a appointment.
+ # Adds a region_site to a application.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add_record.twig for parameters
  #}
