--- a/tpl/application_list.twig
+++ b/tpl/application_list.twig
@@ -1,7 +1,7 @@
 {##
- # appointment_list.twig
+ # application_list.twig
  # 
- # Lists appointments.
+ # Lists applications.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_list.twig for parameters
  #}
