--- a/tpl/application_view.twig
+++ b/tpl/application_view.twig
@@ -1,7 +1,7 @@
 {##
- # appointment_view.twig
+ # application_view.twig
  # 
- # View appointment details.
+ # View application details.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_view.twig for parameters
  #}
