--- a/tpl/base_main.twig
+++ b/tpl/base_main.twig
@@ -11,7 +11,7 @@
 <head>
   {% block head %}
     <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
-    <title>{{ appointment_title }}</title>
+    <title>{{ application_title }}</title>
     <link rel="shortcut icon" href="img/favicon.ico" />
     <script type="text/javascript"></script>
     <link href="{{ constant('JQUERY_UI_URL') }}/css{{ jquery_ui_css_path }}" rel="stylesheet" />
