--- a/tpl/application_add.twig
+++ b/tpl/application_add.twig
@@ -1,7 +1,7 @@
 {##
- # appointment_add.twig
+ # application_add.twig
  # 
- # Form for creating new appointments.
+ # Form for creating new applications.
  # @author Patrick Emond <emondpd@mcmaster.ca>
  # @see base_add.twig for parameters
  #}
