--- a/tpl/cohort_view.twig
+++ b/tpl/cohort_view.twig
@@ -11,6 +11,6 @@
 
   {{ parent() }}
   {% from 'macros.twig' import include_list %}
-  {{ include_list( 'appointment', appointment_list|default(false), true ) }}
+  {{ include_list( 'application', application_list|default(false), true ) }}
 
 {% endblock record %}
