--- a/web/css/app.css
+++ b/web/css/app.css
@@ -52,15 +52,11 @@ input[type=number] { -moz-appearance: textfield; }
 
 /* needed by bootstrap-ui-datetime-picker */
 .datetime-picker div > table .btn-default { border: 0; }
-.outer-container { margin-top: 0.5em; padding: 0px; }
-
-.top-heading {
-  padding-top: 0.33em;
-  padding-bottom: 0.33em;
-}
+.body-heading { padding-top: 0.33em; padding-bottom: 0.33em; min-width: 754px; }
+.body-view { margin-top: 0.5em; padding: 0px; }
 
 .site-title {
-  font-size: 150%;
+  font-size: 130%;
   font-weight: bold;
 }
 
@@ -71,6 +67,7 @@ input[type=number] { -moz-appearance: textfield; }
   position: absolute;
   border: 2px solid #DDD;
   border-radius: 6px;
+  min-width: 720px;
 }
 
 /* snap content, drawers and toggle buttons */
