Implementing Activity list
Added a way to include joins in the modifier parameter for query requests
Added a way to include data from tables one "step" away from main table

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -4,6 +4,7 @@ thead td, tbody td { text-align: center; }
 tfoot { text-align: center; }
 td.tiny { width: 1px; white-space: nowrap; }
 .btn { font-weight: bold; }
+.btn-narrow { padding-left: 6px; padding-right: 6px; }
 .full-width { width: 100% !important; }
 .half-width { width: 50% !important; }
 .left { float: left }
