--- a/web/css/app.css
+++ b/web/css/app.css
@@ -14,6 +14,9 @@ td.tiny { width: 1px; white-space: nowrap; }
 .input-group { width: 100%; }
 .form-body { padding-top: 1em; }
 .form-footer { padding: 1em; background: #EAEAEA; text-align: right; }
+.spacer { margin: 0.5em; }
+.vertical-spacer { margin-top: 0.5em; margin-bottom: 0.5em; }
+.horizontal-spacer { margin-left: 0.5em; margin-right: 0.5em; }
 .rounded, .rounded-top, .rounded-bottom, .rounded-left, .rounded-right { border-radius: 6px !important; }
 .rounded-top { border-bottom-left-radius: 0px !important; border-bottom-right-radius: 0px !important; }
 .rounded-bottom { border-top-left-radius: 0px !important; border-top-right-radius: 0px !important; }
