Implementing N-to-N selection

--- a/web/css/app.css
+++ b/web/css/app.css
@@ -2,6 +2,7 @@ table { margin-bottom: 0px !important; }
 thead, tfoot { font-weight: bold; }
 thead td, tbody td { text-align: center; }
 tfoot { text-align: center; }
+td { border: 0px !important; }
 td.tiny { width: 1px; white-space: nowrap; }
 .btn { font-weight: bold; }
 .btn-narrow { padding-left: 6px; padding-right: 6px; }
