--- a/web/css/app.css
+++ b/web/css/app.css
@@ -110,3 +110,9 @@ snap-content {
   background-repeat: no-repeat;
   background-position: center center;
 }
+
+/* pointer cursor when hovering over selectable table rows */
+.table-hover > tbody > tr:hover > td,
+.table-hover > tbody > tr:hover > th {
+  cursor: pointer;
+}
