--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -158,3 +158,9 @@ slider div.handle:after, [slider] div.handle:after { width: 0px; height: 0px; }
   user-select: none;
   cursor: default;
 }
+
+.loading {
+  background: url( ../img/loading.gif );
+  background-repeat: no-repeat;
+  background-position: center center;
+}
