Making modal-body overflow style to "auto"
The overflow style was changed to "visible" so that the typeahead in the timezone modal would show correctly.
However, this causes problems with modals in general so instead a custom style attribute was added to the
timezone modal's modal-body div to correct the problem.

--- a/web/css/cenozo.css
+++ b/web/css/cenozo.css
@@ -118,7 +118,7 @@ snap-content {
 }
 
 /* modal tweaking */
-.modal-body { display: block; overflow: visible; }
+.modal-body { display: block; overflow: auto; }
 .modal-header, .modal-footer { background: #EAEAEA; }
 .modal-header {
   border-top-left-radius: 6px;
